TEST/EXCEPT-tests/exception_test_009.errout.GOLD
C:\Users\stephen\Dropbox\PropV2-Shared\Projects\PNutTS-work\DIST\GOLD-CAPTURE\exception_test_009.spin2:6:error:Expected a constant, unary operator, or "("
